[gd_scene load_steps=11 format=2]

[ext_resource path="res://UI/ColorRect.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/Weapon.tscn" type="PackedScene" id=2]
[ext_resource path="res://Itim/ThaleahFat.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://scenes/Character.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/Current_Level.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/FightingMiniGame.gd" type="Script" id=6]

[sub_resource type="DynamicFont" id=1]
size = 200
outline_color = Color( 0.901961, 0.964706, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 46.0571, 997.832 )

[sub_resource type="DynamicFont" id=3]
size = 200
font_data = ExtResource( 3 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 846.551, 80.3228 )

[node name="FightingMiniGame" type="Control"]
margin_right = 1108.0
margin_bottom = 1952.0
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Current_Level" parent="." instance=ExtResource( 5 )]
current_level = "Fighting_Training"

[node name="ColorRect" parent="." instance=ExtResource( 1 )]
modulate = Color( 0.396078, 0.827451, 0.870588, 1 )
margin_left = -26.3643
margin_top = -30.7544
margin_right = 1113.64
margin_bottom = 1961.25
color = Color( 0.52549, 0.627451, 0.27451, 1 )

[node name="HowToPlayText" type="Label" parent="."]
margin_left = 79.4763
margin_top = -22.9897
margin_right = 1169.48
margin_bottom = 161.01
rect_scale = Vector2( 0.88346, 0.843234 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.976471, 0.937255, 0.0235294, 1 )
text = "TAP TO THROW"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Weapon" parent="." instance=ExtResource( 2 )]
position = Vector2( 526.731, 1557.69 )
scale = Vector2( 29.394, 24.1893 )

[node name="LeftWall" type="StaticBody2D" parent="."]
position = Vector2( 118.689, -4.98093 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="LeftWall"]
position = Vector2( -289.579, 966.494 )
shape = SubResource( 2 )

[node name="RightWall" type="StaticBody2D" parent="."]
position = Vector2( 1523.81, 0.65387 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="RightWall"]
position = Vector2( -289.579, 966.494 )
shape = SubResource( 2 )

[node name="ScoreNumberText" type="Label" parent="."]
margin_left = 381.108
margin_top = 77.009
margin_right = 981.108
margin_bottom = 261.009
custom_fonts/font = SubResource( 3 )
text = "999"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SpawnPostion" type="Position2D" parent="."]
position = Vector2( 1083.99, 303.806 )

[node name="SpawnPostion2" type="Position2D" parent="."]
position = Vector2( 305.006, 502.48 )

[node name="SpawnPostion3" type="Position2D" parent="."]
position = Vector2( 797.28, 705.143 )

[node name="SpawnPostion4" type="Position2D" parent="."]
position = Vector2( 118.188, 892.888 )

[node name="GameOver" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="GameOver"]
position = Vector2( 532.52, -153.982 )
shape = SubResource( 4 )

[node name="AttackButton" type="Button" parent="."]
margin_left = -80.8318
margin_top = -46.8318
margin_right = 1163.17
margin_bottom = 2011.17
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Character" parent="." instance=ExtResource( 4 )]
position = Vector2( -158.747, 736.528 )

[connection signal="body_entered" from="GameOver" to="." method="_on_GameOver_body_entered"]
[connection signal="pressed" from="AttackButton" to="Weapon" method="_on_AttackButton_pressed"]
